--- a/Notebooks/QFT.ipynb
+++ b/Notebooks/QFT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "7499e1d6",
    "metadata": {},
    "outputs": [
@@ -10,38 +10,66 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+---------+---+\n",
-      "| q0m0(0) | 1 |\n",
-      "+---------+---+\n",
-      "| q0m0(1) | 0 |\n",
-      "+---------+---+\n",
-      "+---------+--------------------+---------------------+\n",
-      "| q0m0    | q0m0(0)            | q0m0(1)             |\n",
-      "+---------+--------------------+---------------------+\n",
-      "| q0m1(0) | 0.7071067811865475 | 0.7071067811865475  |\n",
-      "+---------+--------------------+---------------------+\n",
-      "| q0m1(1) | 0.7071067811865475 | -0.7071067811865475 |\n",
-      "+---------+--------------------+---------------------+\n"
+      "['/Users/arpan/Desktop/Aresty_Quantum_Git/pgmpy/pgmpy', '/Users/arpan/Desktop/Aresty_Quantum_GIt/pgmpy/Notebooks', '/opt/anaconda3/lib/python39.zip', '/opt/anaconda3/lib/python3.9', '/opt/anaconda3/lib/python3.9/lib-dynload', '', '/opt/anaconda3/lib/python3.9/site-packages', '/opt/anaconda3/lib/python3.9/site-packages/aeosa', '/opt/anaconda3/lib/python3.9/site-packages/pgmpy-0.1.16-py3.9.egg', '/opt/anaconda3/lib/python3.9/site-packages/pytz-2021.3-py3.9.egg', '/opt/anaconda3/lib/python3.9/site-packages/locket-0.2.1-py3.9.egg', '/opt/anaconda3/lib/python3.9/site-packages/IPython/extensions', '/Users/arpan/.ipython']\n",
+      "+---------+--------+\n",
+      "| q0m0(0) | (1+0j) |\n",
+      "+---------+--------+\n",
+      "| q0m0(1) | 0j     |\n",
+      "+---------+--------+\n",
+      "+---------+-------------------------+-----+\n",
+      "| q0m0    | q0m0(0)                 | ... |\n",
+      "+---------+-------------------------+-----+\n",
+      "| q0m1(0) | (0.7071067811865475+0j) | ... |\n",
+      "+---------+-------------------------+-----+\n",
+      "| q0m1(1) | (0.7071067811865475+0j) | ... |\n",
+      "+---------+-------------------------+-----+\n"
      ]
     },
     {
-     "ename": "ValueError",
-     "evalue": "Sum or integral of conditional probabilites for node q0m1 is not equal to 1.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-2-870b2fcc3053>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     28\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcpd_q0m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     29\u001b[0m \u001b[0mqft\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madd_cpds\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcpd_q0m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mcpd_q0m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 30\u001b[1;33m \u001b[0mqftInfer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mVariableElimination\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mqft\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     31\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mqftInfer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mquery\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'q0m1'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pgmpy\\inference\\base.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, model)\u001b[0m\n\u001b[0;32m     63\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     64\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmodel\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 65\u001b[1;33m         \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcheck_model\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     66\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     67\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmodel\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mJunctionTree\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pgmpy\\models\\BayesianNetwork.py\u001b[0m in \u001b[0;36mcheck_model\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    398\u001b[0m                     )\n\u001b[0;32m    399\u001b[0m                 \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mcpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mis_valid_cpd\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 400\u001b[1;33m                     raise ValueError(\n\u001b[0m\u001b[0;32m    401\u001b[0m                         \u001b[1;34mf\"Sum or integral of conditional probabilites for node {node} is not equal to 1.\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    402\u001b[0m                     )\n",
-      "\u001b[1;31mValueError\u001b[0m: Sum or integral of conditional probabilites for node q0m1 is not equal to 1."
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "54532aaa6fb742ab91abdf157f4c2d87",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "54ce6dd2b44148348fb0cc01fb4fee55",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+----------------+\n",
+      "| q0m1    |      phi(q0m1) |\n",
+      "+=========+================+\n",
+      "| q0m1(0) | 0.7071+0.0000j |\n",
+      "+---------+----------------+\n",
+      "| q0m1(1) | 0.7071+0.0000j |\n",
+      "+---------+----------------+\n"
      ]
     }
    ],
    "source": [
     "import sys\n",
-    "sys.path.insert(0, 'C:/Users/masch/Quantum Computing/QComp/pgmpy/pgmpy')\n",
-    "\n",
+    "#sys.path.insert(0, '/Users/arpan/Desktop/Aresty_Quantum_Git/pgmpy/pgmpy')\n",
     "#QFT with one qubit\n",
     "\n",
     "import cmath\n",
@@ -74,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "497937f5",
    "metadata": {},
    "outputs": [
@@ -92,30 +120,30 @@
       "+---------+--------+\n",
       "| q1m0(1) | 0j     |\n",
       "+---------+--------+\n",
-      "+---------+-------------------------+-----+-----------------------------------------------+\n",
-      "| q0m0    | q0m0(0)                 | ... | q0m0(1)                                       |\n",
-      "+---------+-------------------------+-----+-----------------------------------------------+\n",
-      "| q1m0    | q1m0(0)                 | ... | q1m0(1)                                       |\n",
-      "+---------+-------------------------+-----+-----------------------------------------------+\n",
-      "| q0m1(0) | (0.7071067811865475+0j) | ... | (0.7071067811865475+0j)                       |\n",
-      "+---------+-------------------------+-----+-----------------------------------------------+\n",
-      "| q0m1(1) | (0.7071067811865475+0j) | ... | (-0.7071067811865475+2.5978681687064796e-16j) |\n",
-      "+---------+-------------------------+-----+-----------------------------------------------+\n",
-      "+---------+-------------------------+-----+-----------------------------------------------+\n",
-      "| q0m0    | q0m0(0)                 | ... | q0m0(1)                                       |\n",
-      "+---------+-------------------------+-----+-----------------------------------------------+\n",
-      "| q1m0    | q1m0(0)                 | ... | q1m0(1)                                       |\n",
-      "+---------+-------------------------+-----+-----------------------------------------------+\n",
-      "| q1m1(0) | (0.7071067811865475+0j) | ... | (0.7071067811865475+0j)                       |\n",
-      "+---------+-------------------------+-----+-----------------------------------------------+\n",
-      "| q1m1(1) | (0.7071067811865475+0j) | ... | (-1.2989340843532398e-16-0.7071067811865475j) |\n",
-      "+---------+-------------------------+-----+-----------------------------------------------+\n"
+      "+---------+-------------------------+-----+\n",
+      "| q0m0    | q0m0(0)                 | ... |\n",
+      "+---------+-------------------------+-----+\n",
+      "| q1m0    | q1m0(0)                 | ... |\n",
+      "+---------+-------------------------+-----+\n",
+      "| q0m1(0) | (0.7071067811865475+0j) | ... |\n",
+      "+---------+-------------------------+-----+\n",
+      "| q0m1(1) | (0.7071067811865475+0j) | ... |\n",
+      "+---------+-------------------------+-----+\n",
+      "+---------+-------------------------+-----+\n",
+      "| q0m0    | q0m0(0)                 | ... |\n",
+      "+---------+-------------------------+-----+\n",
+      "| q1m0    | q1m0(0)                 | ... |\n",
+      "+---------+-------------------------+-----+\n",
+      "| q1m1(0) | (0.7071067811865475+0j) | ... |\n",
+      "+---------+-------------------------+-----+\n",
+      "| q1m1(1) | (0.7071067811865475+0j) | ... |\n",
+      "+---------+-------------------------+-----+\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "281f8c3bd0ef49cbb48c8de457933355",
+       "model_id": "7b32ecfd49d34f0691450ba7e01c7190",
        "version_major": 2,
        "version_minor": 0
       },
@@ -129,7 +157,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7dc0e53df8984c2387e86f26febba367",
+       "model_id": "5f3bf885a5c5497fbebea0a2d59494f5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -145,17 +173,27 @@
      "output_type": "stream",
      "text": [
       "+---------+---------+------------------+\n",
-      "| q1m1    | q0m1    |   phi(q1m1,q0m1) |\n",
+      "| q0m1    | q1m1    |   phi(q0m1,q1m1) |\n",
       "+=========+=========+==================+\n",
-      "| q1m1(0) | q0m1(0) |   0.5000+0.0000j |\n",
+      "| q0m1(0) | q1m1(0) |   0.5000+0.0000j |\n",
       "+---------+---------+------------------+\n",
-      "| q1m1(0) | q0m1(1) |   0.5000+0.0000j |\n",
+      "| q0m1(0) | q1m1(1) |   0.5000+0.0000j |\n",
       "+---------+---------+------------------+\n",
-      "| q1m1(1) | q0m1(0) |   0.5000+0.0000j |\n",
+      "| q0m1(1) | q1m1(0) |   0.5000+0.0000j |\n",
       "+---------+---------+------------------+\n",
-      "| q1m1(1) | q0m1(1) |   0.5000+0.0000j |\n",
+      "| q0m1(1) | q1m1(1) |   0.5000+0.0000j |\n",
       "+---------+---------+------------------+\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'\\nU_QFT(00) = 1/2 00 + 1/2 01 + 1/2 10 + 1/2 11 = (1/sqrt(2)* (0 + 1)) * (1/sqrt(2)* (0 + 1))\\nU_QFT(01) = 1/2 00 + i/2 01 - 1/2 10 - i/2 11 = (1/sqrt(2)* (0 - 1)) * (1/sqrt(2)* (0 + i*1))\\n...\\n'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -195,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "dd2cdbac",
    "metadata": {},
    "outputs": [
@@ -220,7 +258,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ad57f1ef88544e41a03694b737865d3e",
+       "model_id": "b87ca03e2336469082da9fbc27910918",
        "version_major": 2,
        "version_minor": 0
       },
@@ -234,7 +272,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e651441dfbb64cf0a3425092d5b3fadf",
+       "model_id": "d430946f44dc43ba90e434c6d491fae2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -277,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "efd5293e",
    "metadata": {},
    "outputs": [
@@ -318,7 +356,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d94a12a8a22140b591755fd5f185452e",
+       "model_id": "3b2dd260d9ec400bad5b9a743a73b1a4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -332,7 +370,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0bcccdba3adb4b3fbe219e4990c17655",
+       "model_id": "12667a7f97894182ab7fb28a4b11d849",
        "version_major": 2,
        "version_minor": 0
       },
@@ -348,15 +386,15 @@
      "output_type": "stream",
      "text": [
       "+---------+---------+------------------+\n",
-      "| q1m1    | q0m1    |   phi(q1m1,q0m1) |\n",
+      "| q0m1    | q1m1    |   phi(q0m1,q1m1) |\n",
       "+=========+=========+==================+\n",
-      "| q1m1(0) | q0m1(0) |   0.0000+0.0000j |\n",
+      "| q0m1(0) | q1m1(0) |   0.0000+0.0000j |\n",
       "+---------+---------+------------------+\n",
-      "| q1m1(0) | q0m1(1) |   1.0000+0.0000j |\n",
+      "| q0m1(0) | q1m1(1) |   0.0000+0.0000j |\n",
       "+---------+---------+------------------+\n",
-      "| q1m1(1) | q0m1(0) |   0.0000+0.0000j |\n",
+      "| q0m1(1) | q1m1(0) |   1.0000+0.0000j |\n",
       "+---------+---------+------------------+\n",
-      "| q1m1(1) | q0m1(1) |   0.0000+0.0000j |\n",
+      "| q0m1(1) | q1m1(1) |   0.0000+0.0000j |\n",
       "+---------+---------+------------------+\n"
      ]
     }
@@ -383,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "26a1a87f",
    "metadata": {},
    "outputs": [
@@ -396,19 +434,19 @@
       "+---------+--------+\n",
       "| q0m0(1) | 0j     |\n",
       "+---------+--------+\n",
-      "+---------+-------------------------+----------------------------------------------+\n",
-      "| q0m0    | q0m0(0)                 | q0m0(1)                                      |\n",
-      "+---------+-------------------------+----------------------------------------------+\n",
-      "| q0m1(0) | (0.7071067811865475+0j) | (0.7071067811865475+0j)                      |\n",
-      "+---------+-------------------------+----------------------------------------------+\n",
-      "| q0m1(1) | (0.7071067811865475+0j) | (-0.7071067811865475+8.659560562354933e-17j) |\n",
-      "+---------+-------------------------+----------------------------------------------+\n"
+      "+---------+-------------------------+-----+\n",
+      "| q0m0    | q0m0(0)                 | ... |\n",
+      "+---------+-------------------------+-----+\n",
+      "| q0m1(0) | (0.7071067811865475+0j) | ... |\n",
+      "+---------+-------------------------+-----+\n",
+      "| q0m1(1) | (0.7071067811865475+0j) | ... |\n",
+      "+---------+-------------------------+-----+\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ade1df4050f34515bd4f5ca61140d96c",
+       "model_id": "bad2d5bc9b7c4e67932d7933e1c25886",
        "version_major": 2,
        "version_minor": 0
       },
@@ -551,14 +589,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "a0f18e6c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "34213c4c7c0440ceae399fa470100bf5",
+       "model_id": "e68063bcddcd44dea662c7d4d198d83a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -572,7 +610,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "500745e7d48542b1a631ca69bb9bf30b",
+       "model_id": "29dca9ecabec4979a16a6fff07dc4be1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -588,29 +626,29 @@
      "output_type": "stream",
      "text": [
       "+---------+---------+---------+-----------------------+\n",
-      "| q1m1    | q0m1    | q2m1    |   phi(q1m1,q0m1,q2m1) |\n",
+      "| q2m1    | q1m1    | q0m1    |   phi(q2m1,q1m1,q0m1) |\n",
       "+=========+=========+=========+=======================+\n",
-      "| q1m1(0) | q0m1(0) | q2m1(0) |        0.3536+0.0000j |\n",
+      "| q2m1(0) | q1m1(0) | q0m1(0) |        0.3536+0.0000j |\n",
       "+---------+---------+---------+-----------------------+\n",
-      "| q1m1(0) | q0m1(0) | q2m1(1) |       -0.2500+0.2500j |\n",
+      "| q2m1(0) | q1m1(0) | q0m1(1) |       -0.3536+0.0000j |\n",
       "+---------+---------+---------+-----------------------+\n",
-      "| q1m1(0) | q0m1(1) | q2m1(0) |       -0.3536+0.0000j |\n",
+      "| q2m1(0) | q1m1(1) | q0m1(0) |       -0.0000-0.3536j |\n",
       "+---------+---------+---------+-----------------------+\n",
-      "| q1m1(0) | q0m1(1) | q2m1(1) |        0.2500-0.2500j |\n",
+      "| q2m1(0) | q1m1(1) | q0m1(1) |        0.0000+0.3536j |\n",
       "+---------+---------+---------+-----------------------+\n",
-      "| q1m1(1) | q0m1(0) | q2m1(0) |        0.0000-0.3536j |\n",
+      "| q2m1(1) | q1m1(0) | q0m1(0) |       -0.2500+0.2500j |\n",
       "+---------+---------+---------+-----------------------+\n",
-      "| q1m1(1) | q0m1(0) | q2m1(1) |        0.2500+0.2500j |\n",
+      "| q2m1(1) | q1m1(0) | q0m1(1) |        0.2500-0.2500j |\n",
       "+---------+---------+---------+-----------------------+\n",
-      "| q1m1(1) | q0m1(1) | q2m1(0) |        0.0000+0.3536j |\n",
+      "| q2m1(1) | q1m1(1) | q0m1(0) |        0.2500+0.2500j |\n",
       "+---------+---------+---------+-----------------------+\n",
-      "| q1m1(1) | q0m1(1) | q2m1(1) |       -0.2500-0.2500j |\n",
+      "| q2m1(1) | q1m1(1) | q0m1(1) |       -0.2500-0.2500j |\n",
       "+---------+---------+---------+-----------------------+\n"
      ]
     }
    ],
    "source": [
-    "#QFT with 2 qubits\n",
+    "#QFT with 3 qubits\n",
     "\n",
     "N = 8\n",
     "A = 1/(np.sqrt(2))\n",
@@ -671,7 +709,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -685,7 +723,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
