--- a/Notebooks/Variable Elimination.ipynb
+++ b/Notebooks/Variable Elimination.ipynb
@@ -33,22 +33,22 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"word-wrap: normal;white-space: pre;background: #fff0;line-height: 1.1;font-family: &quot;Courier New&quot;,Courier,monospace\">     ┌───┐ ░ ┌───┐      ░ \n",
-       "q_0: ┤ X ├─░─┤ H ├──■───░─\n",
-       "     ├───┤ ░ └───┘┌─┴─┐ ░ \n",
-       "q_1: ┤ X ├─░──────┤ X ├─░─\n",
-       "     └───┘ ░      └───┘ ░ \n",
-       "c: 2/═════════════════════\n",
-       "                          </pre>"
+       "<pre style=\"word-wrap: normal;white-space: pre;background: #fff0;line-height: 1.1;font-family: &quot;Courier New&quot;,Courier,monospace\">      ░ ┌───┐      ░ \n",
+       "q_0: ─░─┤ H ├──■───░─\n",
+       "      ░ └───┘┌─┴─┐ ░ \n",
+       "q_1: ─░──────┤ X ├─░─\n",
+       "      ░      └───┘ ░ \n",
+       "c: 2/════════════════\n",
+       "                     </pre>"
       ],
       "text/plain": [
-       "     ┌───┐ ░ ┌───┐      ░ \n",
-       "q_0: ┤ X ├─░─┤ H ├──■───░─\n",
-       "     ├───┤ ░ └───┘┌─┴─┐ ░ \n",
-       "q_1: ┤ X ├─░──────┤ X ├─░─\n",
-       "     └───┘ ░      └───┘ ░ \n",
-       "c: 2/═════════════════════\n",
-       "                          "
+       "      ░ ┌───┐      ░ \n",
+       "q_0: ─░─┤ H ├──■───░─\n",
+       "      ░ └───┘┌─┴─┐ ░ \n",
+       "q_1: ─░──────┤ X ├─░─\n",
+       "      ░      └───┘ ░ \n",
+       "c: 2/════════════════\n",
+       "                     "
       ]
      },
      "execution_count": 2,
@@ -67,7 +67,7 @@
     "\n",
     "# Here, we construct the bell state circuit using Qiskit\n",
     "# The bit input string allows us to choose an initialization of either |00>, |01>, |10>, or |11>\n",
-    "inputString = \"11\"\n",
+    "inputString = \"00\"\n",
     "\n",
     "circ = QuantumCircuit(2,2)\n",
     "if(inputString == \"01\"):\n",
@@ -96,7 +96,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.        +0.j -0.70710678+0.j  0.70710678+0.j  0.        +0.j]\n"
+      "[0.70710678+0.j 0.        +0.j 0.        +0.j 0.70710678+0.j]\n"
      ]
     }
    ],
@@ -118,7 +118,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e1b92cba234c4bb391256d0eb15b7dd0",
+       "model_id": "6b5d5b4bd1cb4b09bfd249055f54ac95",
        "version_major": 2,
        "version_minor": 0
       },
@@ -132,7 +132,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0299ce89bd0c4385bbc97e9441f1b2d4",
+       "model_id": "04d9c5d5b5364dbfa526aa16da770c0b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -205,7 +205,7 @@
     "    evidence cardinality (list of 2s, based upon how many evidence qubits there are)\n",
     "\"\"\"\n",
     "# Initialization\n",
-    "if(inputString = \"00\"):\n",
+    "if(inputString == \"00\"):\n",
     "    cpd_q0m0 = TabularCPD(variable = 'q0m0', variable_card = 2, values = [[1], [0]])\n",
     "    cpd_q1m0 = TabularCPD(variable = 'q1m0', variable_card = 2, values = [[1], [0]])\n",
     "elif(inputString == \"01\"):\n",
@@ -217,6 +217,9 @@
     "elif(inputString == \"11\"):\n",
     "    cpd_q0m0 = TabularCPD(variable = 'q0m0', variable_card = 2, values = [[0], [1]])\n",
     "    cpd_q1m0 = TabularCPD(variable = 'q1m0', variable_card = 2, values = [[0], [1]])\n",
+    "elif(inputString == \"custom\"):\n",
+    "    cpd_q0m0 = TabularCPD(variable = 'q0m0', variable_card = 2, values = [[1j], [0]])\n",
+    "    cpd_q1m0 = TabularCPD(variable = 'q1m0', variable_card = 2, values = [[1/np.sqrt(2)], [-1j/np.sqrt(2)]])\n",
     "\n",
     "cpd_q0m1 = TabularCPD(variable='q0m1', variable_card = 2, values = [[1/np.sqrt(2), 1/np.sqrt(2)], [1/np.sqrt(2), -1/np.sqrt(2)]], evidence = ['q0m0'], evidence_card = [2])\n",
     "cpd_q1m1 = TabularCPD(variable = 'q1m1', variable_card = 2, values = [[1, 0], [0,1]], evidence = ['q1m0'], evidence_card = [2])\n",
@@ -268,22 +271,22 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"word-wrap: normal;white-space: pre;background: #fff0;line-height: 1.1;font-family: &quot;Courier New&quot;,Courier,monospace\">     ┌───┐      ░            ░ ┌───┐\n",
-       "q_0: ┤ H ├──────░───■────────░─┤ H ├\n",
-       "     ├───┤┌───┐ ░ ┌─┴─┐┌───┐ ░ └───┘\n",
-       "q_1: ┤ X ├┤ H ├─░─┤ X ├┤ X ├─░──────\n",
-       "     └───┘└───┘ ░ └───┘└───┘ ░      \n",
-       "c: 2/═══════════════════════════════\n",
-       "                                    </pre>"
+       "<pre style=\"word-wrap: normal;white-space: pre;background: #fff0;line-height: 1.1;font-family: &quot;Courier New&quot;,Courier,monospace\">      ░ ┌───┐      ░  ░ ┌───┐\n",
+       "q_0: ─░─┤ H ├──────░──░─┤ H ├\n",
+       "      ░ ├───┤┌───┐ ░  ░ └───┘\n",
+       "q_1: ─░─┤ X ├┤ H ├─░──░──────\n",
+       "      ░ └───┘└───┘ ░  ░      \n",
+       "c: 2/════════════════════════\n",
+       "                             </pre>"
       ],
       "text/plain": [
-       "     ┌───┐      ░            ░ ┌───┐\n",
-       "q_0: ┤ H ├──────░───■────────░─┤ H ├\n",
-       "     ├───┤┌───┐ ░ ┌─┴─┐┌───┐ ░ └───┘\n",
-       "q_1: ┤ X ├┤ H ├─░─┤ X ├┤ X ├─░──────\n",
-       "     └───┘└───┘ ░ └───┘└───┘ ░      \n",
-       "c: 2/═══════════════════════════════\n",
-       "                                    "
+       "      ░ ┌───┐      ░  ░ ┌───┐\n",
+       "q_0: ─░─┤ H ├──────░──░─┤ H ├\n",
+       "      ░ ├───┤┌───┐ ░  ░ └───┘\n",
+       "q_1: ─░─┤ X ├┤ H ├─░──░──────\n",
+       "      ░ └───┘└───┘ ░  ░      \n",
+       "c: 2/════════════════════════\n",
+       "                             "
       ]
      },
      "execution_count": 6,
@@ -294,11 +297,11 @@
    "source": [
     "# Here, we construct the deutsch algorithm using Qiskit\n",
     "# The bit input string allows us to choose a specific function: \"ab\" -> f(0) = a, f(1) = b\n",
-    "inputString = \"10\"\n",
+    "inputString = \"00\"\n",
     "\n",
     "# Circuit setup\n",
-    "circ.barrier()\n",
     "circ = QuantumCircuit(2,2)\n",
+    "circ.barrier()\n",
     "circ.h(0)\n",
     "circ.x(1)\n",
     "circ.h(1)\n",
@@ -331,7 +334,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.        +0.j -0.70710678+0.j  0.        +0.j  0.70710678+0.j]\n"
+      "[ 0.70710678+0.j  0.        +0.j -0.70710678+0.j  0.        +0.j]\n"
      ]
     }
    ],
@@ -353,7 +356,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3d2557d34a6d4425a192b3cbeecb0f6e",
+       "model_id": "52a39b2969a74ea4b7741fc1838ed874",
        "version_major": 2,
        "version_minor": 0
       },
@@ -367,7 +370,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5519831330be4ae59ecebc3b9698e40a",
+       "model_id": "331eef9535b84738aace1e7406f866a0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -385,13 +388,13 @@
       "+---------+---------+------------------+\n",
       "| q1m2    | q0m3    |   phi(q1m2,q0m3) |\n",
       "+=========+=========+==================+\n",
-      "| q1m2(0) | q0m3(0) |   0.0000+0.0000j |\n",
+      "| q1m2(0) | q0m3(0) |   0.7071+0.0000j |\n",
       "+---------+---------+------------------+\n",
-      "| q1m2(0) | q0m3(1) |  -0.7071+0.0000j |\n",
+      "| q1m2(0) | q0m3(1) |   0.0000+0.0000j |\n",
       "+---------+---------+------------------+\n",
-      "| q1m2(1) | q0m3(0) |   0.0000+0.0000j |\n",
+      "| q1m2(1) | q0m3(0) |  -0.7071+0.0000j |\n",
       "+---------+---------+------------------+\n",
-      "| q1m2(1) | q0m3(1) |   0.7071+0.0000j |\n",
+      "| q1m2(1) | q0m3(1) |   0.0000+0.0000j |\n",
       "+---------+---------+------------------+\n"
      ]
     }
@@ -440,8 +443,8 @@
      "output_type": "stream",
      "text": [
       "['q1m2', 'q0m3']\n",
-      "[[ 0.        +0.j -0.70710678+0.j]\n",
-      " [ 0.        +0.j  0.70710678+0.j]]\n"
+      "[[ 0.70710678+0.j  0.        +0.j]\n",
+      " [-0.70710678+0.j  0.        +0.j]]\n"
      ]
     }
    ],
@@ -457,151 +460,158 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a0d33c9f",
+   "id": "1e7cae89",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<pre style=\"word-wrap: normal;white-space: pre;background: #fff0;line-height: 1.1;font-family: &quot;Courier New&quot;,Courier,monospace\">     ┌───┐      ░                 ░ ┌───┐\n",
-       "q_0: ┤ H ├──────░───■─────────■───░─┤ H ├\n",
-       "     ├───┤┌───┐ ░ ┌─┴─┐┌───┐┌─┴─┐ ░ └───┘\n",
-       "q_1: ┤ X ├┤ H ├─░─┤ X ├┤ X ├┤ X ├─░──────\n",
-       "     └───┘└───┘ ░ └───┘└───┘└───┘ ░      \n",
-       "c: 2/════════════════════════════════════\n",
-       "                                         </pre>"
-      ],
-      "text/plain": [
-       "     ┌───┐      ░                 ░ ┌───┐\n",
-       "q_0: ┤ H ├──────░───■─────────■───░─┤ H ├\n",
-       "     ├───┤┌───┐ ░ ┌─┴─┐┌───┐┌─┴─┐ ░ └───┘\n",
-       "q_1: ┤ X ├┤ H ├─░─┤ X ├┤ X ├┤ X ├─░──────\n",
-       "     └───┘└───┘ ░ └───┘└───┘└───┘ ░      \n",
-       "c: 2/════════════════════════════════════\n",
-       "                                         "
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BellStateCircuit\n",
+      "{'00': (0.7071+0j), '10': 0j, '01': 0j, '11': (0.7071+0j)}\n"
+     ]
     }
    ],
    "source": [
-    "circ = QuantumCircuit(2,2)\n",
-    "circ.h(0)\n",
-    "circ.x(1)\n",
-    "circ.h(1)\n",
-    "circ.barrier()\n",
-    "circ.cx(0,1)\n",
-    "circ.x(1)\n",
-    "circ.cx(0,1)\n",
-    "circ.barrier()\n",
-    "circ.h(0)\n",
-    "circ.draw()"
+    "def bitListBack(n):\n",
+    "    N = 2**n\n",
+    "    numList = []\n",
+    "    numFormat = \"0\" + str(n) + \"b\"\n",
+    "    for i in range(N):\n",
+    "        numList.append((str(format(i,numFormat))[::-1]))\n",
+    "    return numList\n",
+    "\n",
+    "def QiskitDict(stateVec,n):\n",
+    "    qbits = bitListBack(n)\n",
+    "    QbitDict = {}\n",
+    "    for i in range(2**n):\n",
+    "        QbitDict[qbits[i]]=np.round(stateVec[i],4)\n",
+    "    return QbitDict\n",
+    "\n",
+    "print(\"BellStateCircuit\")\n",
+    "print(QiskitDict(BellStateVec,2))\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "11260fc8",
+   "id": "b8c994af",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-0.70710678+0.j  0.        +0.j  0.70710678+0.j  0.        +0.j]\n"
+      "Deutsch Algorithm\n",
+      "{'00': (0.7071+0j), '10': 0j, '01': (-0.7071+0j), '11': 0j}\n"
      ]
     }
    ],
    "source": [
-    "stv1 = qi.Statevector.from_instruction(circ)\n",
-    "print(stv1.__array__())"
+    "print(\"Deutsch Algorithm\")\n",
+    "print(QiskitDict(djVec,2))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "77d29308",
+   "id": "d55a80f0",
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "567263ffa3674074b187200ffe74c414",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/3 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ec61af85ecc94b59bf93f7f44eb8cd8f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/3 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+---------+---------+------------------+\n",
-      "| q1m2    | q0m3    |   phi(q1m2,q0m3) |\n",
-      "+=========+=========+==================+\n",
-      "| q1m2(0) | q0m3(0) |  -0.7071+0.0000j |\n",
-      "+---------+---------+------------------+\n",
-      "| q1m2(0) | q0m3(1) |   0.0000+0.0000j |\n",
-      "+---------+---------+------------------+\n",
-      "| q1m2(1) | q0m3(0) |   0.7071+0.0000j |\n",
-      "+---------+---------+------------------+\n",
-      "| q1m2(1) | q0m3(1) |   0.0000+0.0000j |\n",
-      "+---------+---------+------------------+\n"
+      "True\n",
+      "True\n",
+      "{'00': (0.7071+0j), '10': 0j, '01': (-0.7071+0j), '11': 0j}\n",
+      "{'00': (0.7071+0j), '10': 0j, '01': (-0.7071+0j), '11': 0j}\n",
+      "['00', '10', '01', '11']\n"
      ]
     }
    ],
    "source": [
-    "#deutsch jozsa --> variable elimination\n",
+    "# Obtain the ordering of the variables in the display above, as well as their values\n",
+    "valArr = q1.variables\n",
+    "valuesArr = q1.values\n",
     "\n",
-    "from pgmpy.models import BayesianNetwork\n",
-    "from pgmpy.factors.discrete.CPD import TabularCPD\n",
-    "import numpy as np\n",
-    "from pgmpy.inference import VariableElimination\n",
+    "def create_var_order(orderArr):\n",
+    "    currNum = 0\n",
+    "    numArr = []\n",
+    "    for order in orderArr:\n",
+    "        if len(order) == 4:\n",
+    "            currNum = order[1]\n",
+    "        numArr.append(currNum)\n",
+    "    return numArr\n",
     "\n",
-    "dj = BayesianNetwork([('q0m0', 'q0m1'), ('q1m0', 'q1m1'), ('q0m1', 'q1m2'), ('q0m1', 'q0m2'), ('q0m2', 'q0m3'), ('q1m1', 'q1m2')])\n",
-    "\n",
-    "cpd_q0m0 = TabularCPD(variable = 'q0m0', variable_card = 2, values = [[1], [0]])\n",
-    "cpd_q1m0 = TabularCPD(variable = 'q1m0', variable_card = 2, values = [[0], [1]])\n",
-    "cpd_q0m1 = TabularCPD(variable='q0m1', variable_card = 2, values = [[1/np.sqrt(2), 1/np.sqrt(2)], [1/np.sqrt(2), 1/-np.sqrt(2)]], evidence = ['q0m0'], evidence_card = [2])\n",
-    "cpd_q1m1 = TabularCPD(variable='q1m1', variable_card = 2, values = [[1/np.sqrt(2), 1/np.sqrt(2)], [1/np.sqrt(2), 1/-np.sqrt(2)]], evidence = ['q1m0'], evidence_card = [2])\n",
-    "cpd_q0m2 = TabularCPD(variable='q0m2', variable_card = 2, values = [[1, 0], [0, 1]], evidence = ['q0m1'], evidence_card = [2])\n",
-    "cpd_q1m2 = TabularCPD(variable='q1m2', variable_card = 2, values = [[0,1,0,1], [1,0,1,0]], evidence = ['q0m1', 'q1m1'], evidence_card = [2,2])\n",
-    "cpd_q0m3 = TabularCPD(variable = 'q0m3', variable_card = 2, values = [[1/np.sqrt(2), 1/np.sqrt(2)], [1/np.sqrt(2), 1/-np.sqrt(2)]], evidence = ['q0m2'], evidence_card = [2])\n",
+    "def bitList(n):\n",
+    "    N = 2**n\n",
+    "    numList = []\n",
+    "    numFormat = \"0\" + str(n) + \"b\"\n",
+    "    for i in range(N):\n",
+    "        numList.append((str(format(i,numFormat))))\n",
+    "    return numList\n",
     "\n",
     "\n",
-    "dj.add_cpds(cpd_q0m0, cpd_q1m0, cpd_q0m1, cpd_q0m2, cpd_q1m2, cpd_q1m1, cpd_q0m3)\n",
+    "def columnize(listOfBits):\n",
+    "    n = len(listOfBits[0])\n",
+    "    holder = []\n",
+    "    for i in range(n):\n",
+    "        col = []\n",
+    "        for bit in listOfBits:\n",
+    "            col.append(bit[i])\n",
+    "        holder.append(col)\n",
+    "    return holder\n",
     "\n",
-    "djInfer = VariableElimination(dj)\n",
+    "def reform():\n",
+    "    varOrderArr = create_var_order(valArr)\n",
+    "    listOfBits = bitList(len(varOrderArr))\n",
+    "    columns = columnize(listOfBits)\n",
+    "    rearrangedColumns = [None]*len(columns)\n",
+    "    for index, order in enumerate(varOrderArr):\n",
+    "        rearrangedColumns[index] = columns[int(order)]\n",
+    "    numOfCols = len(rearrangedColumns)\n",
+    "    bitStr = \"\"\n",
+    "    finalBitArr = []\n",
+    "    for bitIndex in range(len(rearrangedColumns[0])):\n",
+    "        for num in range(numOfCols):\n",
+    "            bitStr+=str(rearrangedColumns[num][bitIndex])\n",
+    "        finalBitArr.append(bitStr)\n",
+    "        bitStr = \"\"\n",
+    "    return finalBitArr\n",
     "\n",
-    "q = djInfer.query(['q0m3', 'q1m2'], evidence = {'q0m0': 0, 'q1m0': 1})\n",
-    "print(q)"
+    "def createHashTable():\n",
+    "    resHash = {}\n",
+    "    bitOrder=reform()\n",
+    "    valuesFlat = valuesArr.flatten()\n",
+    "    for index, key in enumerate(bitOrder):\n",
+    "        resHash[key] = np.round(valuesFlat[index], 4)\n",
+    "    return resHash\n",
+    "\n",
+    "q1PgmpyHash = createHashTable()\n",
+    "valArr = q2.variables\n",
+    "valuesArr = q2.values\n",
+    "q2PgmpyHash = createHashTable()\n",
+    "\n",
+    "print(q1PgmpyHash == QiskitDict(BellStateVec,2))\n",
+    "print(q2PgmpyHash == QiskitDict(djVec,2))\n",
+    "print(q2PgmpyHash)\n",
+    "print(QiskitDict(djVec,2))\n",
+    "print(reform())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e7cae89",
+   "id": "70f6b9b0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "411ec0f8",
    "metadata": {},
    "outputs": [],
    "source": []
