Bit Flip + cpd2dm Function

--- a/Notebooks/Variable Elimination.ipynb
+++ b/Notebooks/Variable Elimination.ipynb
@@ -33,22 +33,22 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"word-wrap: normal;white-space: pre;background: #fff0;line-height: 1.1;font-family: &quot;Courier New&quot;,Courier,monospace\">      ░ ┌───┐      ░ \n",
-       "q_0: ─░─┤ H ├──■───░─\n",
-       "      ░ └───┘┌─┴─┐ ░ \n",
-       "q_1: ─░──────┤ X ├─░─\n",
-       "      ░      └───┘ ░ \n",
-       "c: 2/════════════════\n",
-       "                     </pre>"
+       "<pre style=\"word-wrap: normal;white-space: pre;background: #fff0;line-height: 1.1;font-family: &quot;Courier New&quot;,Courier,monospace\">     ┌───┐ ░ ┌───┐      ░ \n",
+       "q_0: ┤ X ├─░─┤ H ├──■───░─\n",
+       "     └───┘ ░ └───┘┌─┴─┐ ░ \n",
+       "q_1: ──────░──────┤ X ├─░─\n",
+       "           ░      └───┘ ░ \n",
+       "c: 2/═════════════════════\n",
+       "                          </pre>"
       ],
       "text/plain": [
-       "      ░ ┌───┐      ░ \n",
-       "q_0: ─░─┤ H ├──■───░─\n",
-       "      ░ └───┘┌─┴─┐ ░ \n",
-       "q_1: ─░──────┤ X ├─░─\n",
-       "      ░      └───┘ ░ \n",
-       "c: 2/════════════════\n",
-       "                     "
+       "     ┌───┐ ░ ┌───┐      ░ \n",
+       "q_0: ┤ X ├─░─┤ H ├──■───░─\n",
+       "     └───┘ ░ └───┘┌─┴─┐ ░ \n",
+       "q_1: ──────░──────┤ X ├─░─\n",
+       "           ░      └───┘ ░ \n",
+       "c: 2/═════════════════════\n",
+       "                          "
       ]
      },
      "execution_count": 2,
@@ -67,7 +67,7 @@
     "\n",
     "# Here, we construct the bell state circuit using Qiskit\n",
     "# The bit input string allows us to choose an initialization of either |00>, |01>, |10>, or |11>\n",
-    "inputString = \"00\"\n",
+    "inputString = \"10\"\n",
     "\n",
     "circ = QuantumCircuit(2,2)\n",
     "if(inputString == \"01\"):\n",
@@ -96,7 +96,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.70710678+0.j 0.        +0.j 0.        +0.j 0.70710678+0.j]\n"
+      "[ 0.70710678+0.j  0.        +0.j  0.        +0.j -0.70710678+0.j]\n",
+      "[[ 0.5+0.j  0. +0.j  0. +0.j -0.5+0.j]\n",
+      " [ 0. +0.j  0. +0.j  0. +0.j  0. +0.j]\n",
+      " [ 0. +0.j  0. +0.j  0. +0.j  0. +0.j]\n",
+      " [-0.5+0.j  0. +0.j  0. +0.j  0.5+0.j]]\n"
      ]
     }
    ],
@@ -104,9 +108,11 @@
     "# Here, we obtain the state vector for the system after the cx gate\n",
     "BellState = qi.Statevector.from_instruction(circ)\n",
     "BellStateVec = BellState.__array__()\n",
+    "BellStateDM = (qi.DensityMatrix.from_instruction(circ)).__array__()\n",
     "\n",
     "# The format of the state vector is [|00>, |10>, |01>, |11>]\n",
-    "print(BellStateVec)"
+    "print(BellStateVec)\n",
+    "print(BellStateDM)"
    ]
   },
   {
@@ -118,7 +124,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6b5d5b4bd1cb4b09bfd249055f54ac95",
+       "model_id": "e795c11610e8470498b1bcc43a041bc7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -132,7 +138,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "04d9c5d5b5364dbfa526aa16da770c0b",
+       "model_id": "4c3d0190a6d146c39b7ffed569c56999",
        "version_major": 2,
        "version_minor": 0
       },
@@ -156,7 +162,7 @@
       "+---------+---------+------------------+\n",
       "| q0m2(1) | q1m2(0) |   0.0000+0.0000j |\n",
       "+---------+---------+------------------+\n",
-      "| q0m2(1) | q1m2(1) |   0.7071+0.0000j |\n",
+      "| q0m2(1) | q1m2(1) |  -0.7071+0.0000j |\n",
       "+---------+---------+------------------+\n"
      ]
     },
@@ -248,8 +254,8 @@
      "output_type": "stream",
      "text": [
       "['q0m2', 'q1m2']\n",
-      "[[0.70710678+0.j 0.        +0.j]\n",
-      " [0.        +0.j 0.70710678+0.j]]\n"
+      "[[ 0.70710678+0.j  0.        +0.j]\n",
+      " [ 0.        +0.j -0.70710678+0.j]]\n"
      ]
     }
    ],
@@ -271,22 +277,22 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"word-wrap: normal;white-space: pre;background: #fff0;line-height: 1.1;font-family: &quot;Courier New&quot;,Courier,monospace\">      ░ ┌───┐      ░  ░ ┌───┐\n",
-       "q_0: ─░─┤ H ├──────░──░─┤ H ├\n",
-       "      ░ ├───┤┌───┐ ░  ░ └───┘\n",
-       "q_1: ─░─┤ X ├┤ H ├─░──░──────\n",
-       "      ░ └───┘└───┘ ░  ░      \n",
-       "c: 2/════════════════════════\n",
-       "                             </pre>"
+       "<pre style=\"word-wrap: normal;white-space: pre;background: #fff0;line-height: 1.1;font-family: &quot;Courier New&quot;,Courier,monospace\">      ░ ┌───┐      ░       ░ ┌───┐\n",
+       "q_0: ─░─┤ H ├──────░───■───░─┤ H ├\n",
+       "      ░ ├───┤┌───┐ ░ ┌─┴─┐ ░ └───┘\n",
+       "q_1: ─░─┤ X ├┤ H ├─░─┤ X ├─░──────\n",
+       "      ░ └───┘└───┘ ░ └───┘ ░      \n",
+       "c: 2/═════════════════════════════\n",
+       "                                  </pre>"
       ],
       "text/plain": [
-       "      ░ ┌───┐      ░  ░ ┌───┐\n",
-       "q_0: ─░─┤ H ├──────░──░─┤ H ├\n",
-       "      ░ ├───┤┌───┐ ░  ░ └───┘\n",
-       "q_1: ─░─┤ X ├┤ H ├─░──░──────\n",
-       "      ░ └───┘└───┘ ░  ░      \n",
-       "c: 2/════════════════════════\n",
-       "                             "
+       "      ░ ┌───┐      ░       ░ ┌───┐\n",
+       "q_0: ─░─┤ H ├──────░───■───░─┤ H ├\n",
+       "      ░ ├───┤┌───┐ ░ ┌─┴─┐ ░ └───┘\n",
+       "q_1: ─░─┤ X ├┤ H ├─░─┤ X ├─░──────\n",
+       "      ░ └───┘└───┘ ░ └───┘ ░      \n",
+       "c: 2/═════════════════════════════\n",
+       "                                  "
       ]
      },
      "execution_count": 6,
@@ -297,7 +303,7 @@
    "source": [
     "# Here, we construct the deutsch algorithm using Qiskit\n",
     "# The bit input string allows us to choose a specific function: \"ab\" -> f(0) = a, f(1) = b\n",
-    "inputString = \"00\"\n",
+    "inputString = \"01\"\n",
     "\n",
     "# Circuit setup\n",
     "circ = QuantumCircuit(2,2)\n",
@@ -334,7 +340,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.70710678+0.j  0.        +0.j -0.70710678+0.j  0.        +0.j]\n"
+      "[ 0.        +0.j  0.70710678+0.j  0.        +0.j -0.70710678+0.j]\n",
+      "[[ 0. +0.j  0. +0.j  0. +0.j  0. +0.j]\n",
+      " [ 0. +0.j  0.5+0.j  0. +0.j -0.5+0.j]\n",
+      " [ 0. +0.j  0. +0.j  0. +0.j  0. +0.j]\n",
+      " [ 0. +0.j -0.5+0.j  0. +0.j  0.5+0.j]]\n"
      ]
     }
    ],
@@ -342,9 +352,11 @@
     "# Here, we obtain the state vector for the system after the hadamard gate\n",
     "dj = qi.Statevector.from_instruction(circ)\n",
     "djVec = dj.__array__()\n",
+    "djDM = (qi.DensityMatrix.from_instruction(circ)).__array__()\n",
     "\n",
     "# The format of the state vector is [|00>, |10>, |01>, |11>]\n",
-    "print(djVec)"
+    "print(djVec)\n",
+    "print(djDM)"
    ]
   },
   {
@@ -356,7 +368,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "52a39b2969a74ea4b7741fc1838ed874",
+       "model_id": "2e0b5aeae69541cbbcde1af3bdbdecfe",
        "version_major": 2,
        "version_minor": 0
       },
@@ -370,7 +382,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "331eef9535b84738aace1e7406f866a0",
+       "model_id": "e9c810c97b2c4874b39506f2e84e2cf6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -386,15 +398,15 @@
      "output_type": "stream",
      "text": [
       "+---------+---------+------------------+\n",
-      "| q1m2    | q0m3    |   phi(q1m2,q0m3) |\n",
+      "| q0m3    | q1m2    |   phi(q0m3,q1m2) |\n",
       "+=========+=========+==================+\n",
-      "| q1m2(0) | q0m3(0) |   0.7071+0.0000j |\n",
+      "| q0m3(0) | q1m2(0) |   0.0000+0.0000j |\n",
       "+---------+---------+------------------+\n",
-      "| q1m2(0) | q0m3(1) |   0.0000+0.0000j |\n",
+      "| q0m3(0) | q1m2(1) |   0.0000+0.0000j |\n",
       "+---------+---------+------------------+\n",
-      "| q1m2(1) | q0m3(0) |  -0.7071+0.0000j |\n",
+      "| q0m3(1) | q1m2(0) |   0.7071+0.0000j |\n",
       "+---------+---------+------------------+\n",
-      "| q1m2(1) | q0m3(1) |   0.0000+0.0000j |\n",
+      "| q0m3(1) | q1m2(1) |  -0.7071+0.0000j |\n",
       "+---------+---------+------------------+\n"
      ]
     }
@@ -442,9 +454,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['q1m2', 'q0m3']\n",
-      "[[ 0.70710678+0.j  0.        +0.j]\n",
-      " [-0.70710678+0.j  0.        +0.j]]\n"
+      "['q0m3', 'q1m2']\n",
+      "[[ 0.        +0.j  0.        +0.j]\n",
+      " [ 0.70710678+0.j -0.70710678+0.j]]\n"
      ]
     }
    ],
@@ -468,7 +480,7 @@
      "output_type": "stream",
      "text": [
       "BellStateCircuit\n",
-      "{'00': (0.7071+0j), '10': 0j, '01': 0j, '11': (0.7071+0j)}\n"
+      "{'00': (0.7071+0j), '10': 0j, '01': 0j, '11': (-0.7071+0j)}\n"
      ]
     }
    ],
@@ -503,7 +515,7 @@
      "output_type": "stream",
      "text": [
       "Deutsch Algorithm\n",
-      "{'00': (0.7071+0j), '10': 0j, '01': (-0.7071+0j), '11': 0j}\n"
+      "{'00': 0j, '10': (0.7071+0j), '01': 0j, '11': (-0.7071+0j)}\n"
      ]
     }
    ],
@@ -524,9 +536,9 @@
      "text": [
       "True\n",
       "True\n",
-      "{'00': (0.7071+0j), '10': 0j, '01': (-0.7071+0j), '11': 0j}\n",
-      "{'00': (0.7071+0j), '10': 0j, '01': (-0.7071+0j), '11': 0j}\n",
-      "['00', '10', '01', '11']\n"
+      "{'00': 0j, '01': 0j, '10': (0.7071+0j), '11': (-0.7071+0j)}\n",
+      "{'00': 0j, '10': (0.7071+0j), '01': 0j, '11': (-0.7071+0j)}\n",
+      "['00', '01', '10', '11']\n"
      ]
     }
    ],
@@ -602,16 +614,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "70f6b9b0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def cpd_2_dm(obj,rvs,var):\n",
+    "    numQubits = len(var)\n",
+    "    numRVs = len(rvs)\n",
+    "    varOrder = obj.variables\n",
+    "    numVars = len(varOrder)\n",
+    "    qubitOrdering = []\n",
+    "    rvsOrdering = []\n",
+    "    \n",
+    "    for i in range(numQubits):\n",
+    "        v = var[i]\n",
+    "        j = 0\n",
+    "        while(j < numVars and v != varOrder[j]):\n",
+    "            j += 1\n",
+    "        qubitOrdering.append(2**(numVars - j - 1))\n",
+    "        \n",
+    "    for i in range(numRVs):\n",
+    "        v = rvs[i]\n",
+    "        j = 0\n",
+    "        while(j < numVars and v != varOrder[j]):\n",
+    "            j += 1\n",
+    "        rvsOrdering.append(2**(numVars - j - 1))\n",
+    "\n",
+    "    vals = (obj.values).flatten()\n",
+    "    dm = np.zeros((2**numQubits,2**numQubits),dtype=\"complex_\")\n",
+    "    numEvents = 2**numRVs\n",
+    "    numPermutations = 2**numQubits\n",
+    "    \n",
+    "    for i in range(numEvents):\n",
+    "        val1 = 0\n",
+    "        for j in range(numRVs):\n",
+    "            val1 += ((i//(2**j))%2)*rvsOrdering[numRVs - j - 1]\n",
+    "        arr1 = np.zeros((numPermutations,1),dtype=\"complex_\")\n",
+    "        arr2 = np.zeros((1,numPermutations),dtype=\"complex_\")\n",
+    "        for j in range(numPermutations):\n",
+    "            val2 = val1\n",
+    "            for k in range(numQubits):\n",
+    "                val2 += ((j//(2**k))%2)*qubitOrdering[numQubits - k - 1]\n",
+    "            arr1[j][0] = vals[val2]\n",
+    "            arr2[0][j] = np.conj(vals[val2])\n",
+    "        dm += np.matmul(arr1,arr2)\n",
+    "        \n",
+    "    return dm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "411ec0f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.5+0.j  0. +0.j  0. +0.j -0.5+0.j]\n",
+      " [ 0. +0.j  0. +0.j  0. +0.j  0. +0.j]\n",
+      " [ 0. +0.j  0. +0.j  0. +0.j  0. +0.j]\n",
+      " [-0.5+0.j  0. +0.j  0. +0.j  0.5+0.j]]\n",
+      "[[ 0. +0.j  0. +0.j  0. +0.j  0. +0.j]\n",
+      " [ 0. +0.j  0.5+0.j  0. +0.j -0.5+0.j]\n",
+      " [ 0. +0.j  0. +0.j  0. +0.j  0. +0.j]\n",
+      " [ 0. +0.j -0.5+0.j  0. +0.j  0.5+0.j]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = cpd_2_dm(q1,[],['q1m2', 'q0m2'])\n",
+    "print(X)\n",
+    "X = cpd_2_dm(q2,[],['q1m2', 'q0m3'])\n",
+    "print(X)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "411ec0f8",
+   "id": "27f8e11f",
    "metadata": {},
    "outputs": [],
    "source": []
