--- a/Notebooks/CorrelatedBitFlip.ipynb
+++ b/Notebooks/CorrelatedBitFlip.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "ab7b7462",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b33d0f2070db458fb09e316dcc0502fc",
+       "model_id": "3785511e13bc49b2aa1c52f0ad6fcfb3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -23,7 +23,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "732fdf9ba10d4857a9f554f5329ed43e",
+       "model_id": "96100c6f1cef4c9bb1278ca4a2ebaef0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -38,48 +38,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+--------+---------+--------+---------+--------------------------+\n",
-      "| rv2    | q1m1    | rv1    | q0m1    |   phi(rv2,q1m1,rv1,q0m1) |\n",
-      "+========+=========+========+=========+==========================+\n",
-      "| rv2(0) | q1m1(0) | rv1(0) | q0m1(0) |           0.9000+0.0000j |\n",
-      "+--------+---------+--------+---------+--------------------------+\n",
-      "| rv2(0) | q1m1(0) | rv1(0) | q0m1(1) |           0.0000+0.0000j |\n",
-      "+--------+---------+--------+---------+--------------------------+\n",
-      "| rv2(0) | q1m1(0) | rv1(1) | q0m1(0) |           0.0000+0.0000j |\n",
-      "+--------+---------+--------+---------+--------------------------+\n",
-      "| rv2(0) | q1m1(0) | rv1(1) | q0m1(1) |           0.2646+0.0000j |\n",
-      "+--------+---------+--------+---------+--------------------------+\n",
-      "| rv2(0) | q1m1(1) | rv1(0) | q0m1(0) |           0.0000+0.0000j |\n",
-      "+--------+---------+--------+---------+--------------------------+\n",
-      "| rv2(0) | q1m1(1) | rv1(0) | q0m1(1) |           0.0000+0.0000j |\n",
-      "+--------+---------+--------+---------+--------------------------+\n",
-      "| rv2(0) | q1m1(1) | rv1(1) | q0m1(0) |           0.0000+0.0000j |\n",
-      "+--------+---------+--------+---------+--------------------------+\n",
-      "| rv2(0) | q1m1(1) | rv1(1) | q0m1(1) |           0.0000+0.0000j |\n",
-      "+--------+---------+--------+---------+--------------------------+\n",
-      "| rv2(1) | q1m1(0) | rv1(0) | q0m1(0) |           0.0000+0.0000j |\n",
-      "+--------+---------+--------+---------+--------------------------+\n",
-      "| rv2(1) | q1m1(0) | rv1(0) | q0m1(1) |           0.0000+0.0000j |\n",
-      "+--------+---------+--------+---------+--------------------------+\n",
-      "| rv2(1) | q1m1(0) | rv1(1) | q0m1(0) |           0.0000+0.0000j |\n",
-      "+--------+---------+--------+---------+--------------------------+\n",
-      "| rv2(1) | q1m1(0) | rv1(1) | q0m1(1) |           0.0000+0.0000j |\n",
-      "+--------+---------+--------+---------+--------------------------+\n",
-      "| rv2(1) | q1m1(1) | rv1(0) | q0m1(0) |           0.3000+0.0000j |\n",
-      "+--------+---------+--------+---------+--------------------------+\n",
-      "| rv2(1) | q1m1(1) | rv1(0) | q0m1(1) |           0.0000+0.0000j |\n",
-      "+--------+---------+--------+---------+--------------------------+\n",
-      "| rv2(1) | q1m1(1) | rv1(1) | q0m1(0) |           0.0000+0.0000j |\n",
-      "+--------+---------+--------+---------+--------------------------+\n",
-      "| rv2(1) | q1m1(1) | rv1(1) | q0m1(1) |           0.1732+0.0000j |\n",
-      "+--------+---------+--------+---------+--------------------------+\n"
+      "+---------+--------+---------+--------+--------------------------+\n",
+      "| q0m1    | rv1    | q1m1    | rv2    |   phi(q0m1,rv1,q1m1,rv2) |\n",
+      "+=========+========+=========+========+==========================+\n",
+      "| q0m1(0) | rv1(0) | q1m1(0) | rv2(0) |           0.9110+0.0000j |\n",
+      "+---------+--------+---------+--------+--------------------------+\n",
+      "| q0m1(0) | rv1(0) | q1m1(0) | rv2(1) |           0.0000+0.0000j |\n",
+      "+---------+--------+---------+--------+--------------------------+\n",
+      "| q0m1(0) | rv1(0) | q1m1(1) | rv2(0) |           0.0000+0.0000j |\n",
+      "+---------+--------+---------+--------+--------------------------+\n",
+      "| q0m1(0) | rv1(0) | q1m1(1) | rv2(1) |           0.2646+0.0000j |\n",
+      "+---------+--------+---------+--------+--------------------------+\n",
+      "| q0m1(0) | rv1(1) | q1m1(0) | rv2(0) |           0.0000+0.0000j |\n",
+      "+---------+--------+---------+--------+--------------------------+\n",
+      "| q0m1(0) | rv1(1) | q1m1(0) | rv2(1) |           0.0000+0.0000j |\n",
+      "+---------+--------+---------+--------+--------------------------+\n",
+      "| q0m1(0) | rv1(1) | q1m1(1) | rv2(0) |           0.0000+0.0000j |\n",
+      "+---------+--------+---------+--------+--------------------------+\n",
+      "| q0m1(0) | rv1(1) | q1m1(1) | rv2(1) |           0.0000+0.0000j |\n",
+      "+---------+--------+---------+--------+--------------------------+\n",
+      "| q0m1(1) | rv1(0) | q1m1(0) | rv2(0) |           0.0000+0.0000j |\n",
+      "+---------+--------+---------+--------+--------------------------+\n",
+      "| q0m1(1) | rv1(0) | q1m1(0) | rv2(1) |           0.0000+0.0000j |\n",
+      "+---------+--------+---------+--------+--------------------------+\n",
+      "| q0m1(1) | rv1(0) | q1m1(1) | rv2(0) |           0.0000+0.0000j |\n",
+      "+---------+--------+---------+--------+--------------------------+\n",
+      "| q0m1(1) | rv1(0) | q1m1(1) | rv2(1) |           0.0000+0.0000j |\n",
+      "+---------+--------+---------+--------+--------------------------+\n",
+      "| q0m1(1) | rv1(1) | q1m1(0) | rv2(0) |           0.2646+0.0000j |\n",
+      "+---------+--------+---------+--------+--------------------------+\n",
+      "| q0m1(1) | rv1(1) | q1m1(0) | rv2(1) |           0.0000+0.0000j |\n",
+      "+---------+--------+---------+--------+--------------------------+\n",
+      "| q0m1(1) | rv1(1) | q1m1(1) | rv2(0) |           0.0000+0.0000j |\n",
+      "+---------+--------+---------+--------+--------------------------+\n",
+      "| q0m1(1) | rv1(1) | q1m1(1) | rv2(1) |           0.1732+0.0000j |\n",
+      "+---------+--------+---------+--------+--------------------------+\n"
      ]
     }
    ],
    "source": [
     "# Comment out these lines\n",
     "import sys\n",
-    "sys.path.insert(0, 'C:\\\\Users\\\\masch\\\\Quantum Computing\\\\QComp\\\\pgmpy')\n",
+    "sys.path.insert(0, 'C:\\\\Users\\\\masch\\\\QuantumComputing\\\\QComp\\\\pgmpy')\n",
     "\n",
     "# Imports\n",
     "import cmath\n",
@@ -89,14 +89,18 @@
     "from pgmpy.inference import VariableElimination\n",
     "from pgmpy.inference import BeliefPropagation\n",
     "\n",
-    "p1 = 0.1\n",
-    "p2 = 0.3\n",
+    "pA = 0.1\n",
+    "pB = 0.1\n",
+    "pB_givenA = 0.3\n",
+    "pA_givenB = pB_givenA*pA/pB\n",
+    "pB_givenNotA = (1-pA_givenB)*pB/(1-pA)\n",
+    "#p(B|!A) = p(B,!A)/p(!A) = p(!A|B)*p(B)/p(!A) = (1-p(A|B))*p(B)/(1-p(A)) = (p(B)-p(A,B))/(1-p(A))\n",
     "\n",
     "corr_bit_flip = BayesianNetwork([('q0m0','q0m1'),('q1m0','q1m1'),('rv1','rv2'),('rv1','q0m1'),('rv2','q1m1')])\n",
     "cpd_q0m0 = TabularCPD(variable='q0m0',variable_card=2,values=[[1],[0]])\n",
     "cpd_q1m0 = TabularCPD(variable='q1m0',variable_card=2,values=[[1],[0]])\n",
-    "cpd_rv1 = TabularCPD(variable='rv1',variable_card=2,values=[[np.sqrt(1-p1)],[np.sqrt(p1)]])\n",
-    "cpd_rv2 = TabularCPD(variable='rv2',variable_card=2,values=[[np.sqrt(1-p1),np.sqrt(1-p2)],[np.sqrt(p1),np.sqrt(p2)]],evidence=['rv1'],evidence_card=[2])\n",
+    "cpd_rv1 = TabularCPD(variable='rv1',variable_card=2,values=[[np.sqrt(1-pA)],[np.sqrt(pA)]])\n",
+    "cpd_rv2 = TabularCPD(variable='rv2',variable_card=2,values=[[np.sqrt(1-pB_givenNotA),np.sqrt(1-pB_givenA)],[np.sqrt(pB_givenNotA),np.sqrt(pB_givenA)]],evidence=['rv1'],evidence_card=[2])\n",
     "cpd_q0m1 = TabularCPD(variable='q0m1',variable_card=2,values=[[1,0,0,1],[0,1,1,0]],evidence=['q0m0','rv1'],evidence_card=[2,2])\n",
     "cpd_q1m1 = TabularCPD(variable='q1m1',variable_card=2,values=[[1,0,0,1],[0,1,1,0]],evidence=['q1m0','rv2'],evidence_card=[2,2])\n",
     "\n",
@@ -108,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "f0603182",
    "metadata": {},
    "outputs": [],
@@ -159,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "47e49cb1",
    "metadata": {},
    "outputs": [
@@ -167,8 +171,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.81+0.j 0.  +0.j 0.  +0.j 0.  +0.j]\n",
-      " [0.  +0.j 0.09+0.j 0.  +0.j 0.  +0.j]\n",
+      "[[0.83+0.j 0.  +0.j 0.  +0.j 0.  +0.j]\n",
+      " [0.  +0.j 0.07+0.j 0.  +0.j 0.  +0.j]\n",
       " [0.  +0.j 0.  +0.j 0.07+0.j 0.  +0.j]\n",
       " [0.  +0.j 0.  +0.j 0.  +0.j 0.03+0.j]]\n"
      ]
@@ -181,8 +185,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "baf182c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.06999999999999999"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pB_givenNotA*(1-pA)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b7f0bf6",
    "metadata": {},
    "outputs": [],
    "source": []
