Bif File Examples

--- a/Notebooks/CorrelatedBitFlip.ipynb
+++ b/Notebooks/CorrelatedBitFlip.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "ab7b7462",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3785511e13bc49b2aa1c52f0ad6fcfb3",
+       "model_id": "d5191d09992141139d3090104affe63c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -23,7 +23,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "96100c6f1cef4c9bb1278ca4a2ebaef0",
+       "model_id": "6819b80d69e84e298cf22a0a4d649840",
        "version_major": 2,
        "version_minor": 0
       },
@@ -38,41 +38,49 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+---------+--------+---------+--------+--------------------------+\n",
-      "| q0m1    | rv1    | q1m1    | rv2    |   phi(q0m1,rv1,q1m1,rv2) |\n",
-      "+=========+========+=========+========+==========================+\n",
-      "| q0m1(0) | rv1(0) | q1m1(0) | rv2(0) |           0.9110+0.0000j |\n",
-      "+---------+--------+---------+--------+--------------------------+\n",
-      "| q0m1(0) | rv1(0) | q1m1(0) | rv2(1) |           0.0000+0.0000j |\n",
-      "+---------+--------+---------+--------+--------------------------+\n",
-      "| q0m1(0) | rv1(0) | q1m1(1) | rv2(0) |           0.0000+0.0000j |\n",
-      "+---------+--------+---------+--------+--------------------------+\n",
-      "| q0m1(0) | rv1(0) | q1m1(1) | rv2(1) |           0.2646+0.0000j |\n",
-      "+---------+--------+---------+--------+--------------------------+\n",
-      "| q0m1(0) | rv1(1) | q1m1(0) | rv2(0) |           0.0000+0.0000j |\n",
-      "+---------+--------+---------+--------+--------------------------+\n",
-      "| q0m1(0) | rv1(1) | q1m1(0) | rv2(1) |           0.0000+0.0000j |\n",
-      "+---------+--------+---------+--------+--------------------------+\n",
-      "| q0m1(0) | rv1(1) | q1m1(1) | rv2(0) |           0.0000+0.0000j |\n",
-      "+---------+--------+---------+--------+--------------------------+\n",
-      "| q0m1(0) | rv1(1) | q1m1(1) | rv2(1) |           0.0000+0.0000j |\n",
-      "+---------+--------+---------+--------+--------------------------+\n",
-      "| q0m1(1) | rv1(0) | q1m1(0) | rv2(0) |           0.0000+0.0000j |\n",
-      "+---------+--------+---------+--------+--------------------------+\n",
-      "| q0m1(1) | rv1(0) | q1m1(0) | rv2(1) |           0.0000+0.0000j |\n",
-      "+---------+--------+---------+--------+--------------------------+\n",
-      "| q0m1(1) | rv1(0) | q1m1(1) | rv2(0) |           0.0000+0.0000j |\n",
-      "+---------+--------+---------+--------+--------------------------+\n",
-      "| q0m1(1) | rv1(0) | q1m1(1) | rv2(1) |           0.0000+0.0000j |\n",
-      "+---------+--------+---------+--------+--------------------------+\n",
-      "| q0m1(1) | rv1(1) | q1m1(0) | rv2(0) |           0.2646+0.0000j |\n",
-      "+---------+--------+---------+--------+--------------------------+\n",
-      "| q0m1(1) | rv1(1) | q1m1(0) | rv2(1) |           0.0000+0.0000j |\n",
-      "+---------+--------+---------+--------+--------------------------+\n",
-      "| q0m1(1) | rv1(1) | q1m1(1) | rv2(0) |           0.0000+0.0000j |\n",
-      "+---------+--------+---------+--------+--------------------------+\n",
-      "| q0m1(1) | rv1(1) | q1m1(1) | rv2(1) |           0.1732+0.0000j |\n",
-      "+---------+--------+---------+--------+--------------------------+\n"
+      "+--------+--------+---------+---------+--------------------------+\n",
+      "| rv2    | rv1    | q1m1    | q0m1    |   phi(rv2,rv1,q1m1,q0m1) |\n",
+      "+========+========+=========+=========+==========================+\n",
+      "| rv2(0) | rv1(0) | q1m1(0) | q0m1(0) |           0.9000+0.0000j |\n",
+      "+--------+--------+---------+---------+--------------------------+\n",
+      "| rv2(0) | rv1(0) | q1m1(0) | q0m1(1) |           0.0000+0.0000j |\n",
+      "+--------+--------+---------+---------+--------------------------+\n",
+      "| rv2(0) | rv1(0) | q1m1(1) | q0m1(0) |           0.0000+0.0000j |\n",
+      "+--------+--------+---------+---------+--------------------------+\n",
+      "| rv2(0) | rv1(0) | q1m1(1) | q0m1(1) |           0.0000+0.0000j |\n",
+      "+--------+--------+---------+---------+--------------------------+\n",
+      "| rv2(0) | rv1(1) | q1m1(0) | q0m1(0) |           0.0000+0.0000j |\n",
+      "+--------+--------+---------+---------+--------------------------+\n",
+      "| rv2(0) | rv1(1) | q1m1(0) | q0m1(1) |           0.2646+0.0000j |\n",
+      "+--------+--------+---------+---------+--------------------------+\n",
+      "| rv2(0) | rv1(1) | q1m1(1) | q0m1(0) |           0.0000+0.0000j |\n",
+      "+--------+--------+---------+---------+--------------------------+\n",
+      "| rv2(0) | rv1(1) | q1m1(1) | q0m1(1) |           0.0000+0.0000j |\n",
+      "+--------+--------+---------+---------+--------------------------+\n",
+      "| rv2(1) | rv1(0) | q1m1(0) | q0m1(0) |           0.0000+0.0000j |\n",
+      "+--------+--------+---------+---------+--------------------------+\n",
+      "| rv2(1) | rv1(0) | q1m1(0) | q0m1(1) |           0.0000+0.0000j |\n",
+      "+--------+--------+---------+---------+--------------------------+\n",
+      "| rv2(1) | rv1(0) | q1m1(1) | q0m1(0) |           0.3000+0.0000j |\n",
+      "+--------+--------+---------+---------+--------------------------+\n",
+      "| rv2(1) | rv1(0) | q1m1(1) | q0m1(1) |           0.0000+0.0000j |\n",
+      "+--------+--------+---------+---------+--------------------------+\n",
+      "| rv2(1) | rv1(1) | q1m1(0) | q0m1(0) |           0.0000+0.0000j |\n",
+      "+--------+--------+---------+---------+--------------------------+\n",
+      "| rv2(1) | rv1(1) | q1m1(0) | q0m1(1) |           0.0000+0.0000j |\n",
+      "+--------+--------+---------+---------+--------------------------+\n",
+      "| rv2(1) | rv1(1) | q1m1(1) | q0m1(0) |           0.0000+0.0000j |\n",
+      "+--------+--------+---------+---------+--------------------------+\n",
+      "| rv2(1) | rv1(1) | q1m1(1) | q0m1(1) |           0.1732+0.0000j |\n",
+      "+--------+--------+---------+---------+--------------------------+\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\masch\\QuantumComputing\\QComp\\pgmpy\\pgmpy\\extern\\tabulate.py:282: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "  n = conv(string)\n"
      ]
     }
    ],
@@ -100,7 +108,7 @@
     "cpd_q0m0 = TabularCPD(variable='q0m0',variable_card=2,values=[[1],[0]])\n",
     "cpd_q1m0 = TabularCPD(variable='q1m0',variable_card=2,values=[[1],[0]])\n",
     "cpd_rv1 = TabularCPD(variable='rv1',variable_card=2,values=[[np.sqrt(1-pA)],[np.sqrt(pA)]])\n",
-    "cpd_rv2 = TabularCPD(variable='rv2',variable_card=2,values=[[np.sqrt(1-pB_givenNotA),np.sqrt(1-pB_givenA)],[np.sqrt(pB_givenNotA),np.sqrt(pB_givenA)]],evidence=['rv1'],evidence_card=[2])\n",
+    "cpd_rv2 = TabularCPD(variable='rv2',variable_card=2,values=[[np.sqrt(1-pB),np.sqrt(1-pB_givenA)],[np.sqrt(pB),np.sqrt(pB_givenA)]],evidence=['rv1'],evidence_card=[2])\n",
     "cpd_q0m1 = TabularCPD(variable='q0m1',variable_card=2,values=[[1,0,0,1],[0,1,1,0]],evidence=['q0m0','rv1'],evidence_card=[2,2])\n",
     "cpd_q1m1 = TabularCPD(variable='q1m1',variable_card=2,values=[[1,0,0,1],[0,1,1,0]],evidence=['q1m0','rv2'],evidence_card=[2,2])\n",
     "\n",
@@ -112,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "f0603182",
    "metadata": {},
    "outputs": [],
@@ -163,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "47e49cb1",
    "metadata": {},
    "outputs": [
@@ -171,8 +179,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.83+0.j 0.  +0.j 0.  +0.j 0.  +0.j]\n",
-      " [0.  +0.j 0.07+0.j 0.  +0.j 0.  +0.j]\n",
+      "[[0.81+0.j 0.  +0.j 0.  +0.j 0.  +0.j]\n",
+      " [0.  +0.j 0.09+0.j 0.  +0.j 0.  +0.j]\n",
       " [0.  +0.j 0.  +0.j 0.07+0.j 0.  +0.j]\n",
       " [0.  +0.j 0.  +0.j 0.  +0.j 0.03+0.j]]\n"
      ]
