--- a/Notebooks/Variable Elimination.ipynb
+++ b/Notebooks/Variable Elimination.ipynb
@@ -26,32 +26,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "9e3c45a6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<pre style=\"word-wrap: normal;white-space: pre;background: #fff0;line-height: 1.1;font-family: &quot;Courier New&quot;,Courier,monospace\">     ┌───┐ ░ ┌───┐      ░ \n",
-       "q_0: ┤ X ├─░─┤ H ├──■───░─\n",
-       "     └───┘ ░ └───┘┌─┴─┐ ░ \n",
-       "q_1: ──────░──────┤ X ├─░─\n",
-       "           ░      └───┘ ░ \n",
-       "c: 2/═════════════════════\n",
-       "                          </pre>"
+       "<pre style=\"word-wrap: normal;white-space: pre;background: #fff0;line-height: 1.1;font-family: &quot;Courier New&quot;,Courier,monospace\">      ░ ┌───┐      ░ \n",
+       "q_0: ─░─┤ H ├──■───░─\n",
+       "      ░ └───┘┌─┴─┐ ░ \n",
+       "q_1: ─░──────┤ X ├─░─\n",
+       "      ░      └───┘ ░ \n",
+       "c: 2/════════════════\n",
+       "                     </pre>"
       ],
       "text/plain": [
-       "     ┌───┐ ░ ┌───┐      ░ \n",
-       "q_0: ┤ X ├─░─┤ H ├──■───░─\n",
-       "     └───┘ ░ └───┘┌─┴─┐ ░ \n",
-       "q_1: ──────░──────┤ X ├─░─\n",
-       "           ░      └───┘ ░ \n",
-       "c: 2/═════════════════════\n",
-       "                          "
+       "      ░ ┌───┐      ░ \n",
+       "q_0: ─░─┤ H ├──■───░─\n",
+       "      ░ └───┘┌─┴─┐ ░ \n",
+       "q_1: ─░──────┤ X ├─░─\n",
+       "      ░      └───┘ ░ \n",
+       "c: 2/════════════════\n",
+       "                     "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +67,7 @@
     "\n",
     "# Here, we construct the bell state circuit using Qiskit\n",
     "# The bit input string allows us to choose an initialization of either |00>, |01>, |10>, or |11>\n",
-    "inputString = \"10\"\n",
+    "inputString = \"00\"\n",
     "\n",
     "circ = QuantumCircuit(2,2)\n",
     "if(inputString == \"01\"):\n",
@@ -702,7 +702,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -716,7 +716,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
